--- a/auth_service/.env
+++ b/auth_service/.env
@@ -1,6 +1,7 @@
-PORT=8080
+PORT=8081
 PG_HOST=ep-curly-resonance-a1rr7lw6.ap-southeast-1.aws.neon.tech
 PG_USER=todo_owner
 PG_PASSWORD=npg_9m6oFnJREdPx
 PG_DBNAME=todo
-GRPC_HOST=localhost:8082
+JWT_SECRET=testsecret
+GRPC_PORT=8082
